# xbitdiff

./: README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml  python-package.yml
doc/examples/: test.ipynb
xbitdiff/: __init__.py  accessor.py
xdiff/: __init__.py  accessor.py
